--- a/portal/src/Components/Styles/Header.css
+++ b/portal/src/Components/Styles/Header.css
@@ -12,7 +12,7 @@ header {
 a {
   color: white;
   text-decoration: none;
-  font-size: 0.7vw;
+  font-size: 0.7em;
 }
 
 a:hover {
@@ -66,7 +66,7 @@ ul {
 button {
   box-sizing: border-box;
   padding: 0.1em 2em;
-  font-size: 0.5vw;
+  font-size: 0.5em;
   background-color: #696969;
   cursor: pointer;
   border: none;
