--- a/portal/src/App.css
+++ b/portal/src/App.css
@@ -1,6 +1,8 @@
 body {
-  margin: 0 auto;
-  max-width: 1280px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  max-width: 100vw;
 }
 #root {
   text-align: center;
