Создал основу для ленты игр

--- a/portal/src/index.css
+++ b/portal/src/index.css
@@ -1,4 +1,11 @@
 body {
+  display: flex;
+  justify-content: center;
   background-color: black;
-  max-width: 1280px;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  width: 100%;
 }
