--- a/portal/src/Components/Styles/Header.css
+++ b/portal/src/Components/Styles/Header.css
@@ -3,7 +3,7 @@ header {
   align-items: center;
   justify-content: space-around;
   height: 5vh;
-  width: 100vw;
+  max-width: 100vw;
   background-color: rgb(33, 33, 33);
   padding: 10px;
   box-shadow: 0 1px 5px 0 rgba(130, 130, 130, 0.8);
@@ -12,7 +12,7 @@ header {
 a {
   color: white;
   text-decoration: none;
-  font-size: 0.7em;
+  font-size: 1.2em;
 }
 
 a:hover {
@@ -22,27 +22,20 @@ a:hover {
 
 .logo-container {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.svg-container {
-  width: 1rem;
-  height: 1rem;
+.logo {
+  background-image: url("../../assets/logo.svg");
+  background-repeat: no-repeat;
+  height: 1.3em;
+  width: 1.3em;
 }
 
 h2 {
   margin: 0;
-}
-
-.logo-image {
-  width: 128px;
-}
-
-.logo-svg {
-  background-image: url("../../assets/logo.svg");
-  background-repeat: no-repeat;
-  width: 1rem;
-  height: 1rem;
+  max-height: 100%;
 }
 
 .logo-header {
@@ -66,7 +59,6 @@ ul {
 button {
   box-sizing: border-box;
   padding: 0.1em 2em;
-  font-size: 0.5em;
   background-color: #696969;
   cursor: pointer;
   border: none;
